<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/store_outline"
            android:title="@string/menu_category" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/heart_outline"
            android:title="@string/menu_favorites" />
        <item
            android:id="@+id/nav_basket"
            android:icon="@drawable/cart_outline"
            android:title="@string/menu_basket" />
        <item
            android:id="@+id/nav_purchases"
            android:icon="@drawable/credit_card_outline"
            android:title="@string/menu_purchases" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_personal"
                android:icon="@drawable/cog_outline"
                android:title="@string/menu_personal" />
            <item
                android:id="@+id/nav_company"
                android:icon="@drawable/information_outline"
                android:title="@string/menu_company" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/information_outline"
                android:title="@string/menu_feedback" />
        </menu>
    </item>

</menu>
